Closed Bug 1145004 Opened 9 years ago Closed 9 years ago

MSE telemetry VIDEO_MSE_BUFFERING_COUNT is incorrect

Categories

(Core :: Audio/Video, defect)

33 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: cajbir, Assigned: cajbir)

Details

Attachments

(1 file, 1 obsolete file)

From bug 1141915 comment 5:

"As you can see the sum of bucket counts for VIDEO_MSE_PLAY_TIME_MS equals the value stored in VIDEO_MSE_BUFFERING_COUNT. The problem is in [0], you are passing in a count to Accumulate but as documented in [1], a count histogram "only stores a single value and it can only be incremented by one with each add/accumulate call"
Assignee: nobody → cajbir.bugzilla
Attached patch Fix (obsolete) — Splinter Review
Change to accumulate count at the time the buffering happens. Review from cpearce for media changes, feedback from :rvitillo to confirm that I'm using Accumulate correctly as they found the issue originally.
Attachment #8581384 - Flags: review?(cpearce)
Attachment #8581384 - Flags: feedback?(rvitillo)
Status: NEW → ASSIGNED
Attached patch FixSplinter Review
Attached wrong patch before.
Attachment #8581384 - Attachment is obsolete: true
Attachment #8581384 - Flags: review?(cpearce)
Attachment #8581384 - Flags: feedback?(rvitillo)
Attachment #8581385 - Flags: review?(cpearce)
Attachment #8581385 - Flags: feedback?(rvitillo)
Attachment #8581385 - Flags: feedback?(rvitillo) → feedback+
Attachment #8581385 - Flags: review?(cpearce) → review+
https://hg.mozilla.org/mozilla-central/rev/ac30c147653a
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: